# rotortree

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  static.yml
assets/: index.html
assets/benchmarks/: index.html
assets/differ/: index.html
assets/model/: index.html
benches/: tree_bench.rs  tree_bench_all.rs  tree_bench_concurrent.rs  tree_bench_parallel.rs  tree_bench_storage.rs
benches/common/: mod.rs
examples/: bulk_load.rs  light_client.rs
rotortree-viz/: Cargo.toml  build.sh
rotortree-viz/src/: lib.rs
rotortree-viz/www/: index.html
scripts/: generate_report.py  run_benchmarks.sh
src/: error.rs  hash.rs  lib.rs  proof.rs  test_util.rs  tree.rs
src/adapters/: blake3.rs  mod.rs
src/storage/: checkpoint.rs  data.rs  error.rs  frame.rs  mod.rs  recovery.rs  token.rs  wal.rs
tests/: proptest_tree.rs  storage_integration.rs  tree.rs
